Set theme jekyll-theme-merlot

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,3 +16,5 @@ MOONBOX_VERSION: 0.3.0-beta
 MOONBOX_VERSION_SHORT: 0.3.0
 SCALA_BINARY_VERSION: "2.11"
 SCALA_VERSION: "2.11.8"
+
+theme: jekyll-theme-merlot
